; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_init_fw_funcs.c_ecore_set_vxlan_no_l2_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_init_fw_funcs.c_ecore_set_vxlan_no_l2_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32 }
%struct.ecore_ptt = type { i32 }

@PRS_REG_MSG_INFO = common dso_local global i32 0, align 4
@PRS_ETH_VXLAN_NO_L2_ENABLE_OFFSET = common dso_local global i32 0, align 4
@PRS_REG_OUTPUT_FORMAT_4_0_BB_K2 = common dso_local global i32 0, align 4
@PRS_ETH_VXLAN_NO_L2_OUTPUT_FORMAT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ecore_set_vxlan_no_l2_enable(%struct.ecore_hwfn* %0, %struct.ecore_ptt* %1, i32 %2) #0 {
  %4 = alloca %struct.ecore_hwfn*, align 8
  %5 = alloca %struct.ecore_ptt*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %4, align 8
  store %struct.ecore_ptt* %1, %struct.ecore_ptt** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %10 = load %struct.ecore_ptt*, %struct.ecore_ptt** %5, align 8
  %11 = load i32, i32* @PRS_REG_MSG_INFO, align 4
  %12 = call i32 @ecore_rd(%struct.ecore_hwfn* %9, %struct.ecore_ptt* %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* @PRS_ETH_VXLAN_NO_L2_ENABLE_OFFSET, align 4
  %14 = shl i32 1, %13
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %7, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %7, align 4
  %21 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %22 = load %struct.ecore_ptt*, %struct.ecore_ptt** %5, align 8
  %23 = load i32, i32* @PRS_REG_OUTPUT_FORMAT_4_0_BB_K2, align 4
  %24 = load i64, i64* @PRS_ETH_VXLAN_NO_L2_OUTPUT_FORMAT, align 8
  %25 = trunc i64 %24 to i32
  %26 = call i32 @ecore_wr(%struct.ecore_hwfn* %21, %struct.ecore_ptt* %22, i32 %23, i32 %25)
  br label %32

27:                                               ; preds = %3
  %28 = load i32, i32* %8, align 4
  %29 = xor i32 %28, -1
  %30 = load i32, i32* %7, align 4
  %31 = and i32 %30, %29
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %27, %17
  %33 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %34 = load %struct.ecore_ptt*, %struct.ecore_ptt** %5, align 8
  %35 = load i32, i32* @PRS_REG_MSG_INFO, align 4
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @ecore_wr(%struct.ecore_hwfn* %33, %struct.ecore_ptt* %34, i32 %35, i32 %36)
  ret void
}

declare dso_local i32 @ecore_rd(%struct.ecore_hwfn*, %struct.ecore_ptt*, i32) #1

declare dso_local i32 @ecore_wr(%struct.ecore_hwfn*, %struct.ecore_ptt*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
